<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="native_camera_close">Close camera</string>
    <string name="native_camera_flash">Flash</string>
    <string name="native_camera_flash_off">Flash off</string>
    <string name="native_camera_flip">Switch camera</string>
    <string name="native_camera_shutter">Tap for photo, hold for video, drag up or down to zoom</string>
    <string name="native_camera_stop">Stop recording</string>
    <string name="native_camera_photo">Photo</string>
    <string name="native_camera_video">Video</string>
    <string name="native_camera_portrait_rejected">Capture in landscape</string>
    <string name="native_camera_ext_hdr">HDR</string>
    <string name="native_camera_ext_night">Night</string>
    <string name="native_camera_ext_auto">Auto</string>
    <string name="native_camera_ext_standard">Std</string>
    <string name="native_camera_ext_unsupported">Mode not supported here</string>
    <string name="native_camera_exposure_zero">EV 0.0</string>
    <string name="native_camera_exposure_value">EV %1$+.1f</string>
    <string name="native_camera_exposure_accessibility">Exposure %1$s</string>
    <string name="native_camera_exposure_sun">☀</string>
    <string name="native_camera_hint_idle">Tap photo · Hold video\nSlide to zoom</string>
    <string name="native_camera_hint_recording">Slide shutter\nto zoom</string>
    <string name="native_camera_recording_duration">Recording duration</string>
    <string name="native_camera_busy_capturing">Capturing…</string>
    <string name="native_camera_busy_starting">Starting…</string>
    <string name="native_camera_busy_saving">Saving…</string>
    <string name="native_camera_busy_switching">Switching…</string>
    <string name="native_camera_landscape_title">Use Landscape Mode</string>
    <string name="native_camera_landscape_message">Please rotate your device to landscape to capture photos and videos clearly.</string>
</resources>
